SPatch/zancun/ans/10281493

<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
  <title>linux-next: build failure after merge of the akpm-current tree - Patchwork</title>
  <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
  <script type="text/javascript" src="/static/js/common.js"></script>
  <script type="text/javascript" src="/static/js/jquery-1.10.1.min.js"></script>

 </head>
 <body>
  <div id="title">
  <h1 style="float: left;">
     <a
      href="/">Patchwork</a>
    linux-next: build failure after merge of the akpm-current tree</h1>
  <div id="auth">

     <a href="/user/login/">login</a>
     <br/>
     <a href="/register/">register</a>
     <br/>
     <a href="/mail/">mail settings</a>

   </div>
   <div style="clear: both;"></div>
  </div>
  <div id="nav">
   <div id="navleft">
   
    <strong>Project</strong>: LKML
     :
     <a href="/project/LKML/list/"
      >patches</a>
     :
     <a href="/project/LKML/"
      >project info</a>
    
     :
     <a href="/"
     >other projects</a>
     
    
   </div>
   <div id="navright">
    <a href="/help/about/">about</a>
   </div>
   <div style="clear: both"></div>
  </div>

  <div id="content">

<script language="JavaScript" type="text/javascript">
function toggle_headers(link_id, headers_id)
{
    var link = document.getElementById(link_id)
    var headers = document.getElementById(headers_id)

    var hidden = headers.style['display'] == 'none';

    if (hidden) {
        link.innerHTML = 'hide';
        headers.style['display'] = 'block';
    } else {
        link.innerHTML = 'show';
        headers.style['display'] = 'none';
    }

}
</script>

<table class="patchmeta">
 <tr>
  <th>Submitter</th>
  <td><a href="/project/LKML/list/?submitter=79">Stephen Rothwell</a></td>
 </tr>
 <tr>
  <th>Date</th>
  <td>March 14, 2018, 5:45 a.m.</td>
 </tr>
 <tr>
  <th>Message ID</th>
  <td>&lt;20180314164549.47d578b2@canb.auug.org.au&gt;</td>
 </tr>
 <tr>
  <th>Download</th>
  <td>
   <a href="/patch/10281493/mbox/"
   >mbox</a>
|
   <a href="/patch/10281493/raw/"
   >patch</a>

   </td>
 </tr>
 <tr>
  <th>Permalink</th>
  <td><a href="/patch/10281493/">/patch/10281493/</a>
 </tr>
  <tr>
   <th>State</th>
   <td>New</td>
  </tr>


 <tr>
  <th>Headers</th>
  <td><a id="togglepatchheaders"
   href="javascript:toggle_headers('togglepatchheaders', 'patchheaders')"
   >show</a>
   <div id="patchheaders" class="patchheaders" style="display:none;">
    <pre>Return-Path: &lt;linux-kernel-owner@kernel.org&gt;
Received: from mail.wl.linuxfoundation.org (pdx-wl-mail.web.codeaurora.org
	[172.30.200.125])
	by pdx-korg-patchwork.web.codeaurora.org (Postfix) with ESMTP id
	8A0DE601E9 for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed, 14 Mar 2018 05:46:32 +0000 (UTC)
Received: from mail.wl.linuxfoundation.org (localhost [127.0.0.1])
	by mail.wl.linuxfoundation.org (Postfix) with ESMTP id 6DFFB286EC
	for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed, 14 Mar 2018 05:46:32 +0000 (UTC)
Received: by mail.wl.linuxfoundation.org (Postfix, from userid 486)
	id 62386286F1; Wed, 14 Mar 2018 05:46:32 +0000 (UTC)
X-Spam-Checker-Version: SpamAssassin 3.3.1 (2010-03-16) on
	pdx-wl-mail.web.codeaurora.org
X-Spam-Level: 
X-Spam-Status: No, score=-7.0 required=2.0 tests=BAYES_00,DKIM_SIGNED,
	DKIM_VALID, DKIM_VALID_AU,
	RCVD_IN_DNSWL_HI autolearn=ham version=3.3.1
Received: from vger.kernel.org (vger.kernel.org [209.132.180.67])
	by mail.wl.linuxfoundation.org (Postfix) with ESMTP id C5584286EC
	for &lt;patchwork-LKML@patchwork.kernel.org&gt;;
	Wed, 14 Mar 2018 05:46:31 +0000 (UTC)
Received: (majordomo@vger.kernel.org) by vger.kernel.org via listexpand
	id S1753219AbeCNFqU (ORCPT
	&lt;rfc822;patchwork-LKML@patchwork.kernel.org&gt;);
	Wed, 14 Mar 2018 01:46:20 -0400
Received: from ozlabs.org ([103.22.144.67]:58339 &quot;EHLO ozlabs.org&quot;
	rhost-flags-OK-OK-OK-OK) by vger.kernel.org with ESMTP
	id S1750862AbeCNFqS (ORCPT &lt;rfc822;linux-kernel@vger.kernel.org&gt;);
	Wed, 14 Mar 2018 01:46:18 -0400
Received: from authenticated.ozlabs.org (localhost [127.0.0.1])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256
	bits)) (No client certificate requested)
	by ozlabs.org (Postfix) with ESMTPSA id 401LLd0BQfz9sV2;
	Wed, 14 Mar 2018 16:46:17 +1100 (AEDT)
Authentication-Results: ozlabs.org; dmarc=none (p=none dis=none)
	header.from=canb.auug.org.au
DKIM-Signature: v=1; a=rsa-sha256; c=relaxed/simple; d=canb.auug.org.au;
	s=201702; t=1521006377;
	bh=NqUnuuZU60curDHkBta1KzjcdMitzMVlzMAwi7mydqU=;
	h=Date:From:To:Cc:Subject:From;
	b=LdHTvgfw57/DeICRh1aYSJRMIUE8HpTdAeI15/+Tz5JLTQI6V2s0CdrkadQeSeT71
	rmrK9ujIsxEKQSl/KKnwDwRM1l1jHJez3UhtIbLK0I4CiHwtdgLKQjA2zuuisPVpKj
	t8bEi+TSC2Oz3lUD1KklOMRPtTL9iJFP5fGYDSTv9wtm3PfxIVukmmeVH4e3GQVHtg
	0WBZrUzYzGO3bdV+Z/RYJxwrMowQ6JVNY/+Ax9IQJYSZR8uZtV5hxUVNOQTuJzj2AN
	oFDbi97sb++JzusIApmbCY4/sWCgc/snsl8EVZeDWmW8E5KD4Nrcx2J3fksY5hWwgr
	cYKvQW3vDy2BA==
Date: Wed, 14 Mar 2018 16:45:49 +1100
From: Stephen Rothwell &lt;sfr@canb.auug.org.au&gt;
To: Andrew Morton &lt;akpm@linux-foundation.org&gt;
Cc: Linux-Next Mailing List &lt;linux-next@vger.kernel.org&gt;,
	Linux Kernel Mailing List &lt;linux-kernel@vger.kernel.org&gt;,
	Mike Kravetz &lt;mike.kravetz@oracle.com&gt;
Subject: linux-next: build failure after merge of the akpm-current tree
Message-ID: &lt;20180314164549.47d578b2@canb.auug.org.au&gt;
MIME-Version: 1.0
Content-Type: multipart/signed; micalg=pgp-sha256;
	boundary=&quot;Sig_/VF1mgEl0+YgMEvP1CANfpkC&quot;;
	protocol=&quot;application/pgp-signature&quot;
Sender: linux-kernel-owner@vger.kernel.org
Precedence: bulk
List-ID: &lt;linux-kernel.vger.kernel.org&gt;
X-Mailing-List: linux-kernel@vger.kernel.org
X-Virus-Scanned: ClamAV using ClamSMTP
</pre>
   </div>
  </td>
 </tr>
</table>

<div class="patchforms">





 <div style="clear: both;">
 </div>
</div>



<h2>Comments</h2>

<div class="comment">
<div class="meta"><a href="/project/LKML/list/?submitter=79">Stephen Rothwell</a> - March 14, 2018, 5:45 a.m.</div>
<pre class="content">
Hi Andrew,

After merging the akpm-current tree, today&#39;s linux-next build (powerpc
ppc64_defconfig) failed like this:

In file included from include/linux/kernel.h:15:0,
                 from include/linux/list.h:9,
                 from mm/hugetlb.c:5:
mm/hugetlb.c: In function &#39;hugetlb_reserve_pages&#39;:
include/linux/build_bug.h:36:33: error: void value not ignored as it ought to be
 #define BUILD_BUG_ON_INVALID(e) ((void)(sizeof((__force long)(e))))
                                 ^
include/linux/mmdebug.h:52:34: note: in expansion of macro &#39;BUILD_BUG_ON_INVALID&#39;
 #define VM_WARN(cond, format...) BUILD_BUG_ON_INVALID(cond)
                                  ^~~~~~~~~~~~~~~~~~~~
mm/hugetlb.c:4379:6: note: in expansion of macro &#39;VM_WARN&#39;
  if (VM_WARN(from &gt; to, &quot;%s called with a negative range\n&quot;, __func__))
      ^~~~~~~
scripts/Makefile.build:324: recipe for target &#39;mm/hugetlb.o&#39; failed

Caused by commit

  df9b0bfadaa3 (&quot;hugetlbfs-check-for-pgoff-value-overflow-v3-fix&quot;)

I have applied the following patch (a partial revert of the above):
<span class="from">
From: Stephen Rothwell &lt;sfr@canb.auug.org.au&gt;</span>
Date: Wed, 14 Mar 2018 16:38:50 +1100
Subject: [PATCH] pertially revert
 &quot;hugetlbfs-check-for-pgoff-value-overflow-v3-fix&quot;
<span class="signed-off-by">
Signed-off-by: Stephen Rothwell &lt;sfr@canb.auug.org.au&gt;</span>
---
 mm/hugetlb.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
</pre>
</div>



<h2>Patch</h2>
<div class="patch">
<pre class="content">
<span class="p_header">diff --git a/mm/hugetlb.c b/mm/hugetlb.c</span>
<span class="p_header">index 3b31dcfb7621..218679138255 100644</span>
<span class="p_header">--- a/mm/hugetlb.c</span>
<span class="p_header">+++ b/mm/hugetlb.c</span>
<span class="p_chunk">@@ -4376,8 +4376,11 @@</span> <span class="p_context"> int hugetlb_reserve_pages(struct inode *inode,</span>
 	struct resv_map *resv_map;
 	long gbl_reserve;
 
<span class="p_del">-	if (VM_WARN(from &gt; to, &quot;%s called with a negative range\n&quot;, __func__))</span>
<span class="p_add">+	/* This should never happen */</span>
<span class="p_add">+	if (from &gt; to) {</span>
<span class="p_add">+		VM_WARN(1, &quot;%s called with a negative range\n&quot;, __func__);</span>
 		return -EINVAL;
<span class="p_add">+	}</span>
 
 	/*
 	 * Only apply hugepage reservation if asked. At fault time, an

</pre>
</div>




  </div>
  <div id="footer">
   <a href="http://jk.ozlabs.org/projects/patchwork/">patchwork</a>
   patch tracking system
  </div>
 </body>
</html>



